--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   ],
   "version": "0.0.0",
   "devDependencies": {
+    "babel-plugin-styled-components": "^2.0.7",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
@@ -13,5 +14,11 @@
   },
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix"
+  },
+  "resolutions": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "next": "12.2.5",
+    "styled-components": "5.3.5"
   }
 }
