--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   ],
   "version": "0.0.0",
   "devDependencies": {
+    "@svgr/webpack": "^6.3.1",
     "babel-plugin-styled-components": "^2.0.7",
+    "eslint": "8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.1",
