--- a/packages/mirror-media-search/package.json
+++ b/packages/mirror-media-search/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "5.3.5"
+    "styled-components": "5.3.5",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "eslint-config-next": "12.2.5"
