--- a/packages/mirror-media-search/package.json
+++ b/packages/mirror-media-search/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "ioredis": "^5.2.3",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
