--- a/packages/mirror-media-search/package.json
+++ b/packages/mirror-media-search/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.3.1",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "ioredis": "^5.2.3",
