--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -15,6 +15,8 @@
     "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "eslint-config-next": "12.2.5"
+    "concurrently": "^7.4.0",
+    "eslint-config-next": "12.2.5",
+    "express": "^4.18.1"
   }
 }
