fix: the Dockerfile of the mirror-media-next

--- a/packages/mirror-media-next/Dockerfile
+++ b/packages/mirror-media-next/Dockerfile
@@ -17,7 +17,7 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 
-RUN ls /build/
+RUN ls /
 COPY --from=build /build/public ./public
 COPY --from=build /build/.next ./.next
 
