fix: the Dockerfile of the mirror-media-next

--- a/packages/mirror-media-next/Dockerfile
+++ b/packages/mirror-media-next/Dockerfile
@@ -18,7 +18,7 @@ WORKDIR /app
 ENV NODE_ENV=production
 
 #COPY --from=build /build/public ./public
-#COPY --from=build /build/.next ./.next
+COPY --from=build /build/.next ./.next
 
 COPY ["package.json", "yarn.lock", "./"]
 
