--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,15 @@
 steps:
   # build docker image for target sub-pacakge
-  - name: gcr.io/cloud-builders/gcloud
-    entrypoint: 'bash'
+  # use debug tag so that we can use `sh` entrypoint
+  - name: 'gcr.io/kaniko-project/executor:debug'
+    id: Build Image
+    entrypoint: 'sh'
     args:
       - '-c'
       - |
         cp yarn.lock packages/$_TARGET_PACKAGE
         cd packages/$_TARGET_PACKAGE
-        gcloud builds submit --tag gcr.io/$PROJECT_ID/$_IMAGE_NAME:${BRANCH_NAME}_${SHORT_SHA}
+        /kaniko/executor --context="$(pwd)" --cache=true --cache-ttl=6h --destination=gcr.io/$PROJECT_ID/$_IMAGE_NAME:${BRANCH_NAME}_${SHORT_SHA}
 
   # Deploy container image to dev Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
