feat(mm-next): use `@twreporter/errors` to handle error (#64)
* chore(mm-next): update package.json, add Dep `@twreporter/errors`

* feat(mm-next): handle error at `getServerSideProps` of index page

* fix(mm-next): downgrade `axios` to prevent unknown error when use `@twreporter/errors`

* chore(mm-next): bump Dep `@twreporter/errors` and `axios` version

--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.3.1",
-    "axios": "^0.27.2",
+    "@twreporter/errors": "^1.1.2",
+    "axios": "^1.2.0",
     "cors": "^2.8.5",
     "next": "12.2.5",
     "react": "18.2.0",
