--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -16,6 +16,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-infinite-scroller": "^1.2.6",
     "styled-components": "5.3.5",
     "swiper": "^8.4.4"
   },
