--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -8,12 +8,15 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines" : { 
+    "node" : ">=14.0.0 <17.0.0"
+  },
   "dependencies": {
     "@svgr/webpack": "^6.3.1",
     "@twreporter/errors": "^1.1.2",
     "axios": "^1.2.0",
     "cors": "^2.8.5",
-    "next": "12.2.5",
+    "next": "^13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-infinite-scroller": "^1.2.6",
