--- a/packages/mirror-media-search/package.json
+++ b/packages/mirror-media-search/package.json
@@ -8,12 +8,15 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines" : { 
+    "node" : ">=14.0.0 <17.0.0"
+  },
   "dependencies": {
     "@svgr/webpack": "^6.3.1",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "ioredis": "^5.2.3",
-    "next": "12.2.5",
+    "next": "^13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "5.3.5",
