--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -21,12 +21,16 @@ steps:
 
   # Build image
   - name: gcr.io/cloud-builders/docker
+    env:
+    - 'NEXT_PUBLIC_ENV=$_ENV'
     args:
       - '-c'
       - >
         cp yarn.lock packages/$_TARGET_PACKAGE
 
         cd packages/$_TARGET_PACKAGE
+
+        printenv > .env.local
 
         docker build -t
         gcr.io/$PROJECT_ID/$_IMAGE_NAME:${BRANCH_NAME}_${SHORT_SHA} \
