--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,7 @@ steps:
   # Build image
   - name: gcr.io/cloud-builders/docker
     env:
-    - 'NEXT_PUBLIC_ENV=$_ENV'
+    - 'NEXT_PUBLIC_ENV=${BRANCH_NAME}'
     args:
       - '-c'
       - >
