--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -8,14 +8,16 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "engines" : { 
-    "node" : ">=14.0.0 <17.0.0"
+  "engines": {
+    "node": ">=14.0.0 <17.0.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.3",
     "@svgr/webpack": "^6.3.1",
     "@twreporter/errors": "^1.1.2",
     "axios": "^1.2.0",
     "cors": "^2.8.5",
+    "graphql": "^16.6.0",
     "next": "^13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
