--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -27,14 +27,10 @@ steps:
       - '-c'
       - >
         cp yarn.lock packages/$_TARGET_PACKAGE
-
         cd packages/$_TARGET_PACKAGE
-
         printenv > .env.local
-
-        docker build -t
+        docker build -t \
         gcr.io/$PROJECT_ID/$_IMAGE_NAME:${BRANCH_NAME}_${SHORT_SHA} \
-
         -t gcr.io/$PROJECT_ID/$_IMAGE_NAME:latest \
         --cache-from gcr.io/$PROJECT_ID/$_IMAGE_NAME:latest .
     entrypoint: bash
