--- a/packages/weekly-api-server/package.json
+++ b/packages/weekly-api-server/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "http-proxy-middleware": "^2.0.6"
+    "firebase-admin": "^11.4.1",
+    "http-proxy-middleware": "^2.0.6",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
