--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,9 @@ out/
 .nuxt
 dist
 
+# Babel transpiled folder
+lib
+
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
