--- a/packages/mirror-media-search/package.json
+++ b/packages/mirror-media-search/package.json
@@ -8,8 +8,8 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "engines" : { 
-    "node" : ">=14.0.0 <17.0.0"
+  "engines": {
+    "node": ">=14.0.0 <17.0.0"
   },
   "dependencies": {
     "@svgr/webpack": "^6.3.1",
@@ -19,6 +19,7 @@
     "next": "^13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga": "^3.3.1",
     "styled-components": "5.3.5",
     "yup": "^0.32.11"
   },
