--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.3",
     "@next/font": "^13.1.2",
+    "@readr-media/react-image": "^1.2.2",
     "@svgr/webpack": "^6.3.1",
     "@twreporter/errors": "^1.1.2",
     "axios": "^1.2.0",
