--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -28,6 +28,7 @@
     "swiper": "^8.4.4"
   },
   "devDependencies": {
+    "@types/facebook-js-sdk": "^3.3.6",
     "concurrently": "^7.4.0",
     "eslint-config-next": "12.2.5",
     "express": "^4.18.1"
