--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -24,6 +24,7 @@
     "next": "^13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga4": "^2.1.0",
     "styled-components": "5.3.5",
     "swiper": "^8.4.4"
   },
