chore(mm-next): add Dep `@mirrormedia/lilith-draft-renderer`

--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.3",
+    "@mirrormedia/lilith-draft-renderer": "^1.0.0",
     "@next/font": "^13.1.2",
     "@readr-media/react-image": "^1.2.2",
     "@svgr/webpack": "^6.3.1",
