--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
+    "react-gtm-module": "^2.0.11",
     "styled-components": "5.3.5",
     "swiper": "^8.4.4"
   },
