--- a/packages/mirror-media-search/package.json
+++ b/packages/mirror-media-search/package.json
@@ -12,6 +12,7 @@
     "node": ">=14.0.0 <17.0.0"
   },
   "dependencies": {
+    "@readr-media/react-image": "^1.5.1",
     "@svgr/webpack": "^6.3.1",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
