--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -19,6 +19,7 @@
     "@svgr/webpack": "^6.3.1",
     "@twreporter/errors": "^1.1.2",
     "axios": "^1.2.0",
+    "body-scroll-lock": "3.1.5",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "graphql": "^16.6.0",
