--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.3",
-    "@mirrormedia/lilith-draft-renderer": "1.2.0-alpha.20",
+    "@mirrormedia/lilith-draft-renderer": "file:.yalc/@mirrormedia/lilith-draft-renderer",
     "@next/font": "^13.1.2",
     "@readr-media/react-image": "^1.5.1",
     "@svgr/webpack": "^6.3.1",
@@ -29,7 +29,8 @@
     "react-ga4": "^2.1.0",
     "react-gtm-module": "^2.0.11",
     "styled-components": "5.3.5",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/facebook-js-sdk": "^3.3.6",
