--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -29,8 +29,7 @@
     "react-ga4": "^2.1.0",
     "react-gtm-module": "^2.0.11",
     "styled-components": "5.3.5",
-    "swiper": "^8.4.4",
-    "yarn": "^1.22.19"
+    "swiper": "^8.4.4"
   },
   "devDependencies": {
     "@types/facebook-js-sdk": "^3.3.6",
