--- a/packages/weekly-api-server/Dockerfile
+++ b/packages/weekly-api-server/Dockerfile
@@ -19,11 +19,11 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 
-COPY --from=build /build/public ./public
+#COPY --from=build /build/public ./public
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=build /build/.next/standalone ./
-COPY --from=build /build/.next/static ./.next/static
+#COPY --from=build /build/.next/standalone ./
+#COPY --from=build /build/.next/static ./.next/static
 
 CMD ["node", "server.js"]
