fix(WAS): add missing dependencies

--- a/packages/weekly-api-server/package.json
+++ b/packages/weekly-api-server/package.json
@@ -12,6 +12,8 @@
     "node": ">=14.0.0 <17.0.0"
   },
   "dependencies": {
+    "@twreporter/errors": "^1.1.2",
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "firebase-admin": "^11.4.1",
