--- a/packages/weekly-api-server/Dockerfile
+++ b/packages/weekly-api-server/Dockerfile
@@ -2,27 +2,25 @@ ARG NODE_VERSION=16.19.1
 
 FROM node:${NODE_VERSION} AS build
 
-WORKDIR /app
+WORKDIR /build
 
-COPY package.json yarn.lock /app/
+COPY package.json yarn.lock /build/
 
 RUN yarn install
 
-COPY . /app/
+COPY . /build/
 
 RUN yarn build
 
 
 FROM node:${NODE_VERSION}
 
+WORKDIR /app
+
 ENV NODE_ENV=production
 
-#COPY --from=build /build/public ./public
-
 # Automatically leverage output traces to reduce image size
-# https://nextjs.org/docs/advanced-features/output-file-tracing
-#COPY --from=build /build/.next/standalone ./
-#COPY --from=build /build/.next/static ./.next/static
+COPY --from=build /build/node_modules ./node_modules
+COPY --from=build /build/lib ./lib
 
-#CMD ["node", "server.js"]
-CMD ["yarn", "start"]
+CMD ["node", "lib/server.js"]
