--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -23,6 +23,7 @@
     "body-scroll-lock": "3.1.5",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
+    "firebase": "^9.22.0",
     "graphql": "^16.6.0",
     "next": "^13.0.7",
     "react": "18.2.0",
