refactor(mm-next): update Dockerfile to run both proxy server and next.js server

--- a/packages/mirror-media-next/Dockerfile
+++ b/packages/mirror-media-next/Dockerfile
@@ -25,4 +25,8 @@ COPY --from=build /build/public ./public
 COPY --from=build /build/.next/standalone ./
 COPY --from=build /build/.next/static ./.next/static
 
-CMD ["node", "server.js"]
+## Use tini to manage zombie processes and signal forwarding
+## https://github.com/krallin/tini
+ENTRYPOINT ["/usr/bin/tini", "--"]
+
+CMD ["/app/run.sh"]
