fix: update the cloudrun.yaml to deploy multi cloud run instance

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,6 @@
 steps:
-  # Temporarily disable kaniko cache approache.
+  # Temporarily disable kaniko cache approach due to unexpected build errors.
+  #
   # build docker image for target sub-pacakge
   # use debug tag so that we can use `sh` entrypoint
   #- name: 'gcr.io/kaniko-project/executor:debug'
@@ -10,7 +11,7 @@ steps:
   #    - |
   #      cp yarn.lock packages/$_TARGET_PACKAGE
   #      cd packages/$_TARGET_PACKAGE
-  #      /kaniko/executor --context="$(pwd)" --cache=true --cache-ttl=6h --destination=gcr.io/$PROJECT_ID/$_IMAGE_NAME:${BRANCH_NAME}_${SHORT_SHA}
+  #      /kaniko/executor --context="$(pwd)" --cache=true --cache-ttl=48h --destination=gcr.io/$PROJECT_ID/$_IMAGE_NAME:${BRANCH_NAME}_${SHORT_SHA}
 
   # Pull previous image
   - name: gcr.io/cloud-builders/docker
@@ -21,16 +22,12 @@ steps:
 
   # Build image
   - name: gcr.io/cloud-builders/docker
-    env:
-    - 'NEXT_PUBLIC_ENV=${BRANCH_NAME}'
     args:
       - '-c'
       - >
         cp yarn.lock packages/$_TARGET_PACKAGE
 
         cd packages/$_TARGET_PACKAGE
-
-        printenv > .env.local
 
         docker build -t \
 
@@ -47,17 +44,25 @@ steps:
       - push
       - 'gcr.io/$PROJECT_ID/$_IMAGE_NAME:${BRANCH_NAME}_${SHORT_SHA}'
 
-  # Deploy container image to dev Cloud Run
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
-    entrypoint: gcloud
+
+  # Deploy container image to Cloud Runs
+  - name: gcr.io/cloud-builders/gcloud
+    id: Deploy Image
+    entrypoint: 'bash'
     args:
-      - 'run'
-      - 'deploy'
-      - '$_CLOUD_RUN_SERVICE_NAME'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/${_IMAGE_NAME}:${BRANCH_NAME}_${SHORT_SHA}'
-      - '--region'
-      - 'asia-east1'
+      - '-c'
+      - |
+
+        # read cloud run service names from substitution variable
+        IFS=',' read -r -a cloud_runs <<< "$_CLOUD_RUN_SERVICE_NAMES"
+
+        for cr in "${cloud_runs[@]}"
+        do
+
+        # deploy cloud run service iteratively
+        gcloud run deploy "$cr" --image gcr.io/$PROJECT_ID/$_IMAGE_NAME:${BRANCH_NAME}_${SHORT_SHA} --region asia-east1
+
+        done
 
   # Push container image to registry to update the latest one
   - name: gcr.io/cloud-builders/docker
@@ -67,9 +72,7 @@ steps:
 
 timeout: 1200s
 
-images: ['gcr.io/$PROJECT_ID/$_IMAGE_NAME:${BRANCH_NAME}_${SHORT_SHA}', 'gcr.io/$PROJECT_ID/$_IMAGE_NAME:latest']
-
 substitutions:
   _TARGET_PACKAGE: '' # default value
   _IMAGE_NAME: '' # default value
-  _CLOUD_RUN_SERVICE_NAME: '' # default value
+  _CLOUD_RUN_SERVICE_NAMES: '' # default value
