--- a/packages/mirror-media-next/Dockerfile
+++ b/packages/mirror-media-next/Dockerfile
@@ -1,3 +1,9 @@
+RUN set -e; \
+    apt-get update -y && apt-get install -y \
+    tini \
+    apt-get update; \
+    apt-get clean
+
 ARG NODE_VERSION=14.17.3
 
 FROM node:${NODE_VERSION} AS build
