refactor(mmm-next): update dockerfile

--- a/packages/mirror-media-next/Dockerfile
+++ b/packages/mirror-media-next/Dockerfile
@@ -8,7 +8,7 @@ RUN set -e; \
     apt-get update -y && apt-get install -y \
     tini; \
     apt-get update; \
-    && apt-get clean
+    apt-get clean
 
 COPY package.json yarn.lock /build/
 
