refactor(mm-next): update dockerfile

--- a/packages/mirror-media-next/Dockerfile
+++ b/packages/mirror-media-next/Dockerfile
@@ -6,7 +6,7 @@ WORKDIR /build
 
 RUN set -e; \
     apt-get update -y && apt-get install -y \
-    tini; \
+    tini \
     apt-get update; \
     apt-get clean
 
