chore(mmn): debug: print build time environment variable

--- a/packages/mirror-media-next/Dockerfile
+++ b/packages/mirror-media-next/Dockerfile
@@ -4,6 +4,8 @@ FROM node:${NODE_VERSION} AS build
 
 WORKDIR /build
 
+RUN echo "NEXT_PUBLIC_ENV: $NEXT_PUBLIC_ENV"
+
 COPY package.json yarn.lock /build/
 
 RUN yarn install
