--- a/packages/mirror-media-search/package.json
+++ b/packages/mirror-media-search/package.json
@@ -20,6 +20,8 @@
     "next": "^13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga4": "^2.1.0",
+    "react-gtm-module": "^2.0.11",
     "styled-components": "5.3.5",
     "yup": "^0.32.11"
   },
