--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -17,7 +17,7 @@
     "@mirrormedia/lilith-draft-renderer": "^1.3.0-alpha.5",
     "@mirrormedia/newebpay-node": "^1.0.8",
     "@next/font": "^13.1.2",
-    "@readr-media/react-image": "^2.1.3",
+    "@readr-media/react-image": "2.2.0",
     "@readr-media/share-button": "^1.0.3",
     "@svgr/webpack": "^6.3.1",
     "@twreporter/errors": "^1.1.2",
