--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
     "firebase": "^9.22.0",
+    "googleapis": "^126.0.1",
     "graphql": "^16.6.0",
     "http-proxy-middleware": "^2.0.6",
     "next": "^13.0.7",
