--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-ga4": "^2.1.0",
     "react-gtm-module": "^2.0.11",
+    "request-ip": "^3.3.0",
     "styled-components": "5.3.5",
     "swiper": "^8.4.4"
   },
