--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -27,6 +27,7 @@
     "body-scroll-lock": "3.1.5",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
+    "debounce": "^1.2.1",
     "express": "^4.18.2",
     "firebase": "^9.22.0",
     "googleapis": "^126.0.1",
