chore(mm-next): add Dep `bowser`

--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -25,6 +25,7 @@
     "apollo-link-timeout": "^4.0.0",
     "axios": "^1.2.0",
     "body-scroll-lock": "3.1.5",
+    "bowser": "^2.11.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "debounce": "^1.2.1",
