--- a/packages/weekly-api-server/package.json
+++ b/packages/weekly-api-server/package.json
@@ -12,6 +12,7 @@
     "node": ">=14.0.0 <17.0.0"
   },
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.0.1",
     "@twreporter/errors": "^1.1.2",
     "axios": "^1.4.0",
     "cors": "^2.8.5",
