--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -29,10 +29,12 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "debounce": "^1.2.1",
+    "dom-serializer": "^2.0.0",
     "express": "^4.18.2",
     "firebase": "^9.22.0",
     "googleapis": "^126.0.1",
     "graphql": "^16.6.0",
+    "htmlparser2": "^9.1.0",
     "http-proxy-middleware": "^2.0.6",
     "next": "^13.0.7",
     "react": "18.2.0",
