--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -20,6 +20,7 @@
     "@next/font": "^13.1.2",
     "@readr-media/react-image": "2.2.1",
     "@readr-media/share-button": "^1.0.3",
+    "@reduxjs/toolkit": "^2.1.0",
     "@svgr/webpack": "^6.3.1",
     "@twreporter/errors": "^1.1.2",
     "apollo-link-timeout": "^4.0.0",
@@ -38,6 +39,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
+    "react-redux": "^9.1.0",
     "request-ip": "^3.3.0",
     "styled-components": "5.3.5",
     "swiper": "^8.4.4"
