--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -33,6 +33,7 @@
     "dom-serializer": "^2.0.0",
     "express": "^4.18.2",
     "firebase": "^9.22.0",
+    "google-spreadsheet": "^4.1.1",
     "googleapis": "^126.0.1",
     "graphql": "^16.6.0",
     "htmlparser2": "^9.1.0",
