--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "prepare": "husky install"
+  },
   "version": "0.0.0",
   "devDependencies": {
     "babel-plugin-styled-components": "^2.0.7",
@@ -14,6 +17,6 @@
     "prettier": "^2.7.1"
   },
   "lint-staged": {
-    "*.{js,jsx}": "eslint --cache --fix"
+    "*.{js,mjs,jsx}": "eslint --cache --fix"
   }
 }
