--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,12 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:prettier/recommended"],
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:prettier/recommended"
+  ],
+  "env": {
+    "es6": true
+  },
   "plugins": ["prettier"],
   "parserOptions": {
     "ecmaVersion": 2021,
@@ -7,6 +14,7 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "no-unused-vars": "error"
+    "no-unused-vars": "error",
+    "no-empty-pattern": "off"
   }
 }
