--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,6 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "no-unused-vars": "error",
-    "no-empty-pattern": "off"
+    "no-unused-vars": "error"
   }
 }
