--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -27,12 +27,14 @@
     "axios": "^1.2.1",
     "body-scroll-lock": "3.1.5",
     "bowser": "^2.11.0",
+    "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "debounce": "^1.2.1",
     "dom-serializer": "^2.0.0",
     "express": "^4.18.2",
     "firebase": "^9.22.0",
+    "firebase-admin": "^12.0.0",
     "google-spreadsheet": "^4.1.1",
     "googleapis": "^126.0.1",
     "graphql": "^16.6.0",
