--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -41,6 +41,7 @@
     "htmlparser2": "^9.1.0",
     "http-proxy-middleware": "^2.0.6",
     "next": "^13.0.7",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-gtm-module": "^2.0.11",
