--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.2.1",
     "body-scroll-lock": "3.1.5",
     "bowser": "^2.11.0",
+    "constants": "mirror-media/constants#v2.0.0",
     "cookie": "^0.6.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
