--- a/packages/mirror-media-search/package.json
+++ b/packages/mirror-media-search/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@readr-media/react-image": "^1.5.1",
+    "@readr-media/react-infinite-scroll-list": "^1.2.0",
     "@svgr/webpack": "^6.3.1",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
