--- a/packages/mirror-media-search/package.json
+++ b/packages/mirror-media-search/package.json
@@ -17,6 +17,7 @@
     "@svgr/webpack": "^6.3.1",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "ioredis": "^5.2.3",
     "next": "^13.0.7",
     "react": "18.2.0",
