--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -42,6 +42,7 @@
     "graphql": "^16.6.0",
     "htmlparser2": "^9.1.0",
     "http-proxy-middleware": "^2.0.6",
+    "ioredis": "^5.4.2",
     "next": "^13.0.7",
     "next-pwa": "^5.6.0",
     "react": "18.2.0",
@@ -50,7 +51,8 @@
     "react-redux": "^9.1.0",
     "request-ip": "^3.3.0",
     "styled-components": "5.3.5",
-    "swiper": "^8.4.4"
+    "swiper": "^8.4.4",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/facebook-js-sdk": "^3.3.6",
