refactor: add @readr-media/react-infinite-scroll-list

--- a/packages/mirror-media-next/package.json
+++ b/packages/mirror-media-next/package.json
@@ -19,6 +19,7 @@
     "@mirrormedia/newebpay-node": "^1.0.8",
     "@next/font": "^13.1.2",
     "@readr-media/react-image": "2.2.1",
+    "@readr-media/react-infinite-scroll-list": "^1.2.0",
     "@readr-media/share-button": "^1.0.3",
     "@reduxjs/toolkit": "^2.1.0",
     "@svgr/webpack": "^6.3.1",
